# tool-kit-nash

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
nash/: __init__.py  api.py  cli.py  launcher.py
nash/data/: crosspair_test.json  listwise_test.json  triplet_test.json
nash/evaluator/: __init__.py  aggregation.py  alignment.py  datasets.py  evaluation.py  extraction.py  masking.py  metric.py  metric_api.py  numeric_similarity.py  trace.py  types.py
nash/evaluator/backends/: __init__.py  base.py  bertscore_backend.py  sentence_transformer_backend.py
nash/web/: index.html
nash/web/assets/: index-DQF8aNKN.js  index-unOz5G5B.css  index-wxv2BZSY.js
web/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  react-shim.d.ts  styles.css  types.ts
web/src/demo_data/: demo_cases.generated.json  demo_traces.json  triplet_demo.json
