[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nash-eval"
version = "0.1.0"
description = "NASH financial numerical alignment evaluation toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "bert-score>=0.3.13",
  "sentence-transformers>=3.0.0",
  "torch>=2.1.0",
  "transformers>=4.44.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
nash-eval = "nash.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nash*"]

[tool.setuptools.package-data]
nash = ["web/**/*", "data/*.json"]
